--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="to-do-app">
+        <div class="todo-app">
             <h2>To-Do List <img src="./images/icon.png"></h2>
             <div class="row">
                 <input type="text" id="box" placeholder="Add Ur Point!">
